--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "movies-browser-react",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://wojtekkkwojtek.github.io/movies-browser-react",
+    "homepage": "https://IT2021db.io/movies-browser-react",
     "dependencies": {
         "@reduxjs/toolkit": "^1.8.1",
         "@testing-library/jest-dom": "^5.16.4",
